syntax = "proto3";

package auth;

option go_package = "/;proto";

service Auth {
	rpc Login(LoginRequest) returns (LoginResponse) {}
	rpc Register(RegisterRequest) returns (RegisterResponse) {}
	rpc ForgotPassword(ForgotPasswordRequest) returns (ForgotPasswordResponse) {}
	rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse) {}

	rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {}
}

message LoginRequest {
	string email = 1;
	string password = 2;
}

message LoginResponse {
	string refresh_token = 1;
	string access_token = 2;
}

message RegisterRequest {
	enum Class {
		k_9 = 0;
		k_10 = 1;
		k_11 = 2;
		k_12 = 3;
	}

	string email = 1;
	string password = 2;

	string name = 3;
	string school = 4;
	Class class = 5;
}

message RegisterResponse {
	string refresh_token = 1;
	string access_token = 2;
}

message ForgotPasswordRequest {
	string email = 1;
}

message ForgotPasswordResponse {
}

message RefreshTokenRequest {
	string token = 1;
}

message RefreshTokenResponse {
	string token = 2;
}

message ResetPasswordRequest {
	string token = 1;
	string email = 2;
	string password = 3;
}

message ResetPasswordResponse {
}
